# reverie

./: .gitignore  CLAUDE.md  README.md  Taskfile.yml  pyproject.toml
src/reverie/: __main__.py  discovery.py  exporter.py  models.py  parser.py  picker.py  pricing.py  renderer.py
